@@ -1,4 +1,4 @@
-/*	$NetBSD: monop.def,v 1.7 2003/08/07 09:37:28 agc Exp $	*/
+/*	$NetBSD: monop.def,v 1.8 2004/01/26 09:59:36 jsm Exp $	*/
 
 /*-
  * Copyright (c) 1980, 1993
