@@ -1,4 +1,4 @@
-/*	$NetBSD: monop.ext,v 1.5 2003/08/07 09:37:29 agc Exp $	*/
+/*	$NetBSD: monop.ext,v 1.6 2004/01/26 09:59:36 jsm Exp $	*/
 
 /*-
  * Copyright (c) 1980, 1993
